stirling-pdf/stirling-pdf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    matchLabels:
      app: stirling-pdf
  replicas: 1
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: stirling-pdf-chart
        image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:2.1.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - name: tessdata
          mountPath: /usr/share/data
        - name: configs
          mountPath: /configs
        - name: logs
          mountPath: /logs
      volumes:
      - name: tessdata
        persistentVolumeClaim:
          claimName: stirling-pdf-tessdata-pvc
      - name: configs
        persistentVolumeClaim:
          claimName: stirling-pdf-configs-pvc
      - name: logs
        persistentVolumeClaim:
          claimName: stirling-pdf-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
  - port: 8080
    targetPort: 8080
    name: http
